// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions handleUsageBanner should dispatch notify if there is a notification 1`] = `
[
  {
    "payload": {
      "CTA": {
        "text": "Go to billing page",
        "to": "/app/settings/billing",
        "type": "internal",
      },
      "buttons": [],
      "id": "99",
      "message": "new notification test",
      "status": "none",
      "style": "banner",
      "type": "warning",
    },
    "type": "reapop/upsertNotification",
  },
]
`;

exports[`actions handleUsageBanner should hide and dispatch notify if there is a notification and status change 1`] = `
[
  {
    "payload": "99",
    "type": "reapop/dismissNotification",
  },
  {
    "payload": {
      "CTA": {
        "text": "Go to billing page",
        "to": "/app/settings/billing",
        "type": "internal",
      },
      "buttons": [],
      "id": "99",
      "message": "new notification test",
      "status": "none",
      "style": "banner",
      "type": "warning",
    },
    "type": "reapop/upsertNotification",
  },
]
`;

exports[`actions handleUsageBanner should hide the banner if the status has changed 1`] = `
[
  {
    "payload": "99",
    "type": "reapop/dismissNotification",
  },
]
`;

exports[`actions handleUsageBanner should not do anything if no notification and status has not changed 1`] = `[]`;
